# claude2openai

./: Cargo.toml  Dockerfile
src/: beta_features.rs  config.rs  error.rs  main.rs  routing.rs  thinking.rs  token_counting.rs  validation.rs
src/converters/: claude_to_openai.rs  mod.rs  openai_to_claude.rs  streaming.rs
src/handlers/: messages.rs  mod.rs  models.rs  token_counting.rs
src/middleware/: cors.rs  request_id.rs
src/types/: claude.rs  openai.rs
